--- a/client/index.html
+++ b/client/index.html
@@ -18,11 +18,24 @@
             display: block;
             margin: 10px 0;
         }
+        .variant-container {
+            display: flex;
+            gap: 30px;
+        }
+        .variant-item {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .vote-count {
+            padding-top: 16px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
 <h1>Голосование: Какой котик вам нравится больше?</h1>
-<div id="variants" style="display:flex; gap:30px"></div>
+<div id="variants" class="variant-container"></div>
 
 <script>
     function generateUniqueId() {
@@ -35,74 +48,95 @@
         localStorage.setItem('voteId', voteId);
     }
 
-    async function fetchVariants() {
-        const response = await fetch('/variants');
-        const variants = await response.json();
-        const variantsDiv = document.getElementById('variants');
-        variantsDiv.innerHTML = '';
+    let variantsData = [];
+    let votesData = [];
 
-        variants.forEach(v => {
-            const variantDiv = document.createElement('div');
-            variantDiv.innerHTML = `
-                    <img src="${v.imageUrl}" alt="Котик ${v.id}">
-                    <div style="display:flex; flex-direction: column">
-                        <button onclick="vote(${v.id})">${v.text}</button>
-                        <span style="padding-top: 16px"> Голосов: ${v.votes}</span>
-                    </div>
-                `;
-            variantsDiv.appendChild(variantDiv);
-        });
+    async function fetchVariants() {
+        try {
+            const response = await fetch('/variants');
+            variantsData = await response.json();
+            renderVariants();
+        } catch (error) {
+            console.error('Ошибка при загрузке вариантов:', error);
+        }
+    }
+
+    async function fetchVotes() {
+        try {
+            const response = await fetch('/votes');
+            votesData = await response.json();
+            updateVotesDisplay();
+        } catch (error) {
+            console.error('Ошибка при загрузке голосов:', error);
+        }
     }
 
     async function fetchStats() {
-        const response = await fetch('/stats', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            }
-        });
-        const stats = await response.json();
-        return stats;
+        try {
+            const response = await fetch('/stats', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+            votesData = await response.json();
+            updateVotesDisplay();
+        } catch (error) {
+            console.error('Ошибка при загрузке статистики:', error);
+        }
     }
 
-    async function updateStatistics() {
-        const stats = await fetchStats();
+    function renderVariants() {
         const variantsDiv = document.getElementById('variants');
         variantsDiv.innerHTML = '';
 
-        stats.forEach(v => {
+        variantsData.forEach(variant => {
             const variantDiv = document.createElement('div');
+            variantDiv.className = 'variant-item';
             variantDiv.innerHTML = `
-                    <img src="${v.imageUrl}" alt="Котик ${v.id}">
-                    <div style="display:flex; flex-direction: column">
-                        <button onclick="vote(${v.id})">${v.text}</button>
-                        <span style="padding-top: 16px"> Голосов: ${v.votes}</span>
-                    </div>
-                `;
+                <img src="${variant.imageUrl}" alt="Котик ${variant.id}">
+                <button onclick="vote(${variant.id})">${variant.text}</button>
+                <span id="votes-${variant.id}" class="vote-count">Загрузка голосов...</span>
+            `;
             variantsDiv.appendChild(variantDiv);
+        });
+        fetchVotes();
+    }
+
+    function updateVotesDisplay() {
+        votesData.forEach(vote => {
+            const voteSpan = document.getElementById(`votes-${vote.id}`);
+            if (voteSpan) {
+                voteSpan.textContent = `Голосов: ${vote.votes}`;
+            }
         });
     }
 
     async function vote(id) {
-        const response = await fetch('/vote', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json',
-                'X-Vote-ID': voteId
-            },
-            body: JSON.stringify({ id }),
-        });
-        const result = await response.json();
-        if (result.success) {
-            alert('Ваш голос принят!');
-        } else {
-            alert(result.message);
-        }
-        updateStatistics();
-    }
+        try {
+            const response = await fetch('/vote', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'X-Vote-ID': voteId
+                },
+                body: JSON.stringify({ id }),
+            });
 
+            const result = await response.json();
+
+            if (result.success) {
+                alert('Ваш голос принят!');
+                fetchStats();
+            } else {
+                alert(result.message);
+            }
+        } catch (error) {
+            console.error('Ошибка при голосовании:', error);
+            alert('Произошла ошибка при голосовании. Пожалуйста, попробуйте позже.');
+        }
+    }
     fetchVariants();
-    updateStatistics();
 </script>
 </body>
 </html>
